--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Compiled class file
+build/
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# Tools
+.idea/
+.gradle/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
